// Vitest Snapshot v1

exports[`components > N8NCallout > content > should pass props to text component correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_j298b_1 _warning_j298b_15\\" bold=\\"true\\" align=\\"center\\" tag=\\"p\\">
  <div class=\\"_icon_j298b_33\\">
    <n8n-icon-stub icon=\\"exclamation-triangle\\" size=\\"xlarge\\" bold=\\"true\\" align=\\"center\\" tag=\\"p\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub bold=\\"true\\" size=\\"medium\\" align=\\"center\\" tag=\\"p\\"><span>This is a callout.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > content > should render custom HTML content correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_j298b_1 _custom_j298b_9\\">
  <div class=\\"_icon_j298b_33\\">
    <n8n-icon-stub icon=\\"code\\" size=\\"xlarge\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"medium\\" tag=\\"span\\"><span>This is an HTML callout. <a href=\\"#\\" target=\\"_blank\\"><b>Read more</b></a></span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > props > should render custom theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_j298b_1 _custom_j298b_9\\">
  <div class=\\"_icon_j298b_33\\">
    <n8n-icon-stub icon=\\"code\\" size=\\"xlarge\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"medium\\" tag=\\"span\\"><span>This is an custom callout.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > props > should render danger theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_j298b_1 _danger_j298b_27\\">
  <div class=\\"_icon_j298b_33\\">
    <n8n-icon-stub icon=\\"times-circle\\" size=\\"xlarge\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"medium\\" tag=\\"span\\"><span>This is an danger callout.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > props > should render info theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_j298b_1 _info_j298b_9\\">
  <div class=\\"_icon_j298b_33\\">
    <n8n-icon-stub icon=\\"info-circle\\" size=\\"xlarge\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"medium\\" tag=\\"span\\"><span>This is an info callout.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > props > should render success theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_j298b_1 _success_j298b_21\\">
  <div class=\\"_icon_j298b_33\\">
    <n8n-icon-stub icon=\\"check-circle\\" size=\\"xlarge\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"medium\\" tag=\\"span\\"><span>This is an success callout.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > props > should render warning theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_j298b_1 _warning_j298b_15\\">
  <div class=\\"_icon_j298b_33\\">
    <n8n-icon-stub icon=\\"exclamation-triangle\\" size=\\"xlarge\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"medium\\" tag=\\"span\\"><span>This is an warning callout.</span></n8n-text-stub>
  </div>
</div>"
`;
